syntax = "proto3";

option java_package = "betting.house.projection.proto";


message MarketIdsBet {
	string marketId = 1;
}
message WalletIdsBet {
	string walletId = 1;
}
message SumStakes {
	repeated SumStake sumstakes = 1;
}
message SumStake{
	double total = 1;
	int32 result = 2;
}

message BetData{
	string betId = 1;
	string walletId = 2;
	string marketId = 3;
	string marketName = 4;
	double odds = 5;
	int32 stake = 6;
	int32 result = 7;
}

message BetDataList {
	repeated BetData betDatas = 1;
}

service BetProjectionService {
	rpc GetBetByMarket(MarketIdsBet) returns (SumStakes) {}
	rpc GetBetsForMarket(MarketIdsBet) returns (BetDataList) {}
	rpc GetBetsForPlayer(WalletIdsBet) returns (BetDataList) {}
}

message Status {
	string betId = 1;
	string walletId = 2;
	string marketId = 3;
	string marketName = 4;
	double odds = 5;
	int32 stake = 6;
	int32 result = 7;
	bool marketConfirmed = 8;
	bool fundsConfirmed = 9;
}

message OpenState {
	Status status = 1;
	int32 fundReservationCount = 2;
	int32 fundReservationMaxRetries = 3;
	int32 marketConfirmationRetryCount = 4;
	int32 marketConfirmationMaxRetries = 5;
}

message BetSettledState {
	Status status = 2;
}

message ValidationsPassedState {
	Status status = 2;
}

message MarketConfirmed {
	string betId = 1;
	OpenState state = 2;
}

message FundsGranted {
	string betId = 1;
	OpenState state = 2;
}

message ValidationsPassed {
	string betId = 1;
	OpenState state = 2;
}

message BetSettled {
	string betId = 1;
	ValidationsPassedState state = 2;
}

message Opened {
	string betId = 1;
	string walletId = 2;
	string marketId = 3;
	string marketName = 4;
	double odds = 5;
	int32 stake = 6;
	int32 result = 7;
}

message Cancelled {
	string betId = 1;
	string reason = 2;
}

message MarketValidationFailed {
	string betId = 1;
	string reason = 2;
}

message FundReservationDenied {
	string betId = 1;
	string reason = 2;
	OpenState state = 3;
}

message MarketConfirmationDenied {
	string betId = 1;
	string reason = 2;
	OpenState state = 3;
}

message Failed {
	string betId = 1;
	string reason = 2;
}

message Closed {
	string betId = 1;
}